@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G3toG4BuildTree.cc,v 1.16 2001-07-16 15:38:21 gcosmo Exp $
+// $Id: G3toG4BuildTree.cc,v 1.17 2001-11-08 16:08:00 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // modified by I. Hrivnacova, 2.8.99 
@@ -35,6 +35,8 @@
 #include "G3Pos.hh"
 #include "G4LogicalVolume.hh"
 #include "G4PVPlacement.hh"
+#include "G4ReflectionFactory.hh"
+#include "G4Transform3D.hh"
 
 void G3toG4BuildTree(G3VolTableEntry* curVTE, G3VolTableEntry* motherVTE)
 {
@@ -119,10 +121,17 @@ void G3toG4BuildPVTree(G3VolTableEntry* curVTE)
               mothLV = 0;
             }  
     
-            // rotation matrix
+            // transformation
             G4int irot = theG3Pos->GetIrot();
             G4RotationMatrix* theMatrix = 0;
             if (irot>0) theMatrix = G3Rot.Get(irot);
+            G4Rotate3D rotation;
+            if (theMatrix) {            
+  	     rotation = G4Rotate3D(*theMatrix);
+	    }
+
+            G4Translate3D translation(*(theG3Pos->GetPos()));
+	    G4Transform3D transform3D = translation * (rotation.inverse());
 
             // copy number
             // (in G3 numbering starts from 1 but in G4 from 0)
@@ -130,14 +139,14 @@ void G3toG4BuildPVTree(G3VolTableEntry* curVTE)
       
             // position it if not top-level volume
 	    if (mothLV != 0) {
-	      new G4PVPlacement(theMatrix,              // rotation matrix
-	  		        *(theG3Pos->GetPos()),  // its position
-			        curLog,                 // its LogicalVolume 
-			        curVTE->GetName(),      // PV name
-			        mothLV,                 // Mother LV
-			        0,                      // only
-			        copyNo);                // copy
-	
+              G4ReflectionFactory::Instance()
+	        ->Place(transform3D,       // transformation
+	                curVTE->GetName(), // PV name
+			curLog,            // its logical volume 
+			mothLV,            // mother logical volume
+			false,             // only
+			copyNo);           // copy
+	                                             
               // verbose
   	      #ifdef G3G4DEBUG
 	        G4cout << "PV: " << i << "th copy of " << curVTE->GetName()
